--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.show_sql=true
 
 server.port=8091
 server.servlet.context-path=/movie
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=springtestallah@gmail.com
+spring.mail.password=qgwspntzjubnsskt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+sendMailTo="siddhants4000@gmail.com"
