Email Sender Code Added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.mail.password=qgwspntzjubnsskt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 sendMailTo="siddhants4000@gmail.com"
+#sendMailTo="vibheshsharma26@gmail.com"
